test_suite/tests/ui/closure.stderr
error[E0658]: custom attributes cannot be applied to statements
 --> tests/ui/closure.rs:5:5
  |
5 |     #[time_function]
  |     ^^^^^^^^^^^^^^^^
  |
  = note: see issue #54727 <https://github.com/rust-lang/rust/issues/54727> for more information

error: expected `fn`
 --> tests/ui/closure.rs:6:5
  |
6 |     let a = || test_function();
  |     ^^^
